correct main heading spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,7 +91,7 @@ nav a:hover {
 /* Banner Section */ 
 
 h1 {
-    margin: 5% 0;
+    margin: 125px 0 0 0;
 }
 
 img {
